--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "./node_modules/.bin/http-server . -c-1"
+    "server": "./node_modules/.bin/http-server . -c-1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
