--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "./node_modules/.bin/eslint src"
     "server": "./node_modules/.bin/http-server . -c-1",
     "start": "node server.js"
   },
@@ -12,5 +13,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "http-server": "^0.11.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.3.0",
+    "husky": "^3.0.5"
   }
 }
